[package]
name = "plugwise"
version = "0.0.1"
authors = ["Willem <willem66745@gmail.com>"]

[dependencies]
crc16 = "0.3"
time = "0.1"
serial = "0.3"
num = "0.1"
log = "0.3"

[dev-dependencies]
toml = "0.1"
getopts = "0.2"

[dev-dependencies.ntpclient]
git = "https://github.com/willem66745/ntpclient-rust"
